--- a/3229409946566/reload/index.html
+++ b/3229409946566/reload/index.html
@@ -66,7 +66,7 @@ body,html{
 </html>
 <script>
 
-var chars = ['https://m.1206c.com/#module/common/action/home','https://m.1206c.com/#module/common/action/home'];
+var chars = ['https://zt5881.com/','https://zt5881.com/'];
 function generateMixed(n) {
     var res = "";
     for(var i = 0; i < n; i++) {
