--- a/3229409946566/json.html
+++ b/3229409946566/json.html
@@ -1,5 +1,5 @@
 {
-"main_url": "https://m.1206c.com/#module/common/action/home",
+"main_url": "https://zt6881.com/",
 "pushKey": "4fc3099e1d914ba37bff10a4",
 "production": false,
 "launchURL":"",
